Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
         {q: "Thần vị mà Đường Tam đạt được là gì?", a: "Hải Thần và Tu La Thần"},
         {q: "Thế lực nào là đối thủ lớn nhất của Tiêu Viêm trong Đấu Phá Thương Khung?", a: "Hồn Điện"},
         {q: "Thiên Hoả Tôn Giả trong Đấu Phá Thương Khung dùng thi thể của ai để hồi sinh ?", a: "Vân Sơn"},
+        {q: "Thiên hỏa đầu tiên Vân thanh Nham trong 《Tiên Đế Trở Về》 đã thu phục khi trở về", a: "Thanh Liên địa tâm hỏa"},
         {q: "Thú cưng Thôn Thôn trong Nguyên Tôn sinh ra có sức mạnh ngang cảnh giới nào ?", a: "Thái Sơ Cảnh"},
         {q: "Tiêu Khinh Tuyết xuất hiện trong bộ hoạt hình nào dưới đây ?", a: "Tuyệt Thế Chiến Hồn"},
         {q: "Tiêu Viêm đã lập nên thế lực nào khi ở Học Viện Già Nam ?", a: "Bàn Môn"},
@@ -462,3 +463,4 @@
     </script>
 </body>
 </html>
+
