--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
         {q: "Loại dị hỏa đầu tiên Tiêu Viêm trong 《Đấu Phá Thương Khung》 thu phục là gì?", a: "Thanh Liên Địa Tâm Hỏa"},
         {q: "Loại đan dược giúp Tiêu Viêm khôi phục thiên phú tên là gì?", a: "Phá Tông Đan"},
         {q: "Nhân vật Hải Ba Đông là đảo chủ của tổ chức nào?", a: "Mộ Thiên Hải"},
-        {q: "Đấu Khí Hóa Dực là đặc trưng của cấp bậc nào trong 《Đấu Phá Thương Khung》?", a: "Đấu Vương"},
+        {q: ""Đấu Khí Hóa Dực" là đặc trưng của cấp bậc nào trong 《Đấu Phá Thương Khung》?", a: "Đấu Vương"},
         {q: "Tiêu Viêm từng nhận danh hiệu gì tại Luyện Đan Sư Đại Hội?", a: "Quán quân"},
         {q: "Tiêu Viêm gia nhập tông môn nào đầu tiên?", a: "Vân Lam Tông"},
         {q: "Khôi lỗi Tiêu Viêm《 Đấu Phá Thương Khung》dùng thân thể của Địa Ma Lão Quỷ tạo thành?", a: "Thiên Yêu Khôi"},
@@ -461,5 +461,6 @@
     </script>
 </body>
 </html>
+
 
 
