--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
         {q: "Khôi lỗi Tiêu Viêm《 Đấu Phá Thương Khung》dùng thân thể của Địa Ma Lão Quỷ tạo thành?", a: "Thiên Yêu Khôi"},
         {q: "Dị hỏa từng thuộc về Dược Trần được truyền cho Tiêu Viêm trong 《Đấu Phá Thương Khung》là gì?", a: "Cốt Linh Lãnh Hỏa"},
         {q: "Ai là người dạy Tần Mục đao pháp?", a: "Đồ tể"},
-        {q: "Cảnh giới tu luyện ban đầu trong phim được nhắc đến là?", a: "Linh Thai"},
+        {q: "Các cảnh giới sau đây, đâu là cảnh giới đầu tiên trong các bộ phim hoạt hình trung quốc ? ", a: "Linh Thai"},
         {q: "Thân phận thật của lão đồ tể trong 《Mục Thần Ký》", a: "Thiên Đao"},
         {q: "Thân phận thật của Tư bà bà - Tư ẤU U trong 《Mục Thần Ký》", a: "Thiên Ma giáo thánh nữ"},
         {q: "Bảo vật Tư bà bà trong 《Mục Thần Ký》để lại cho Tần Mục khi lên ngôi giáo chủ", a: "Đại Dục Thiên Ma Kinh"},
@@ -461,6 +461,7 @@
     </script>
 </body>
 </html>
+
 
 
 
