--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
         {q: "Tiêu Viêm trong 《Đấu Phá Thương Khung》gia nhập tông môn nào đầu tiên?", a: "Vân Lam Tông"},
         {q: "Tần Mục trong 《Mục Thần Ký》 lớn lên ở đâu?", a: "Tàn Lão Thôn"},
         {q: "Tần Mục trong 《Mục Thần Ký》 sinh ra ở đâu?", a: "Vô Ưu Hương"},
-        {q: "Thần khí mà Vân Thanh Nham trong 《Tiên Đế Trở Về》 mang trở về từ tiên giới?", a: "Trảm Thiên Thần Kiếm"},
+        {q: "Thần khí mà Vân Thanh Nham mang trở về từ tiên giới?", a: "Trảm Thiên Thần Kiếm"},
         {q: "Môn phái đầu tiên Vương Lâm trong 《Tiên Nghịch》 gia nhập là?", a: "Hằng Nhạc Phái"},
         {q: "Nhân vật Nạp Lan Yên Nhiên trong 《Đấu Phá Thương Khung》 quan hệ với Tiêu Viêm là gì?", a: "Vợ chưa cưới"},
         {q: "Hồn hoàn thứ nhất của Đường Tam trong 《Đấu La Đại Lục》 được săn bắn từ con hồn thú nào?", a: "Nhân Diện Ma Chu"},
@@ -461,6 +461,7 @@
     </script>
 </body>
 </html>
+
 
 
 
